# okx-hft-collector

./: .gitignore  Dockerfile.airflow  README.md  check_orderbook_table.sql  docker-compose.yml  pyproject.toml
docker/: Dockerfile  Dockerfile.webhook  alert-webhook.py  alert_rules.yml  alertmanager.yml  docker-compose.yml  prometheus.yml  readme.md
docs/: okx_messages.md
migrations/: 001_add_ts_ingest_ms_to_orderbook_updates.sql  002_add_ts_ingest_ms_to_orderbook_snapshots.sql  README.md
scripts/: check_tables.py  okx_orderbook_local.py  test_shutdown_flush.py  test_shutdown_flush_standalone.py
src/okx_hft/: run.py
src/okx_hft/config/: settings.py
src/okx_hft/dq/: interfaces.py  simple.py
src/okx_hft/handlers/: funding_rate.py  index_tickers.py  interfaces.py  liquidations.py  mark_price.py  open_interest.py  orderbook.py  orderbook_l2.py  tickers.py  trades.py
src/okx_hft/metrics/: server.py
src/okx_hft/storage/: clickhouse.py  interfaces.py  postgres.py
src/okx_hft/utils/: logging.py
src/okx_hft/ws/: client.py
tests/: independent_counter.py  independent_counter_for_all.py  test_orderbook.py  test_shutdown_flush.py
