
[tool.poetry]
name = "okx-hft-collector"
version = "0.1.0"
description = "Production-grade OKX WebSocket market data collector with ClickHouse storage, DQ, metrics"
authors = ["Dima & ChatGPT"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
aiohttp = "^3.9.5"
orjson = "^3.10.7"
uvloop = {version="^0.19.0", markers="sys_platform != 'win32'"}
prometheus-client = "^0.20.0"
httpx = "^0.27.0"
clickhouse-connect = "^0.7.19"
tenacity = "^8.5.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
